Added pages, side bar modules, css updates, replies can now also be made on Work Orders/Support Requests and so much more..

--- a/public/404.html
+++ b/public/404.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>The page you were looking for doesn't exist (404)</title>
-	<style type="text/css">
-		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+  <link href="stylesheets/application.css" rel="">
+    <style type="text/css">
 		div.dialog {
 			width: 25em;
 			padding: 0 4em;
@@ -18,13 +15,24 @@
 		}
 		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
 	</style>
-</head>
 
+</head>
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
+<div id="container">
+  <div id="yield">
+    <div id="page_title" class="text_shadow">
+      <h1>The page you were looking for doesn't exist (404)</h1>
+    </div>
+    <div class="dialog">
     <h1>The page you were looking for doesn't exist.</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
   </div>
+  </div>
+</div>
+<div id="footer">
+  <p>
+    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2011 - v2.0.0.0 ALPHA - Glen Vanderhel
+  </p>
+</div>
 </body>
 </html>
