--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
 <br/>myitcrm (myitcrm@gmail.com)
 <br/>      </p>
     
-
-    
       <h2>Contact</h2>
       <p>Glen Vanderhel (myitcrm@gmail.com)
 <br/>      </p>
@@ -65,7 +63,7 @@
     <p>
       You can download this project in either
       <a href="https://github.com/myitcrm/myitcrm2/zipball/master">zip</a> or
-      <a href="https://github.com/myitcrm/myitcrm2/tarball/master">tar formats.
+      <a href="https://github.com/myitcrm/myitcrm2/tarball/master">tar formats.</a>
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
