Update Copyright year to 2015 [skip ci]

--- a/public/404.html
+++ b/public/404.html
@@ -31,7 +31,7 @@
 </div>
 <div id="footer">
   <p>
-    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2011 - v2.0.0.0 ALPHA - Glen Vanderhel
+    Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2015 - Glen Vanderhel
   </p>
 </div>
 </body>
